工作过程中的遇到问题的解决方案整理

--- a/_posts/Android/Other/2019-10-26-49.md
+++ b/_posts/Android/Other/2019-10-26-49.md
@@ -28,6 +28,21 @@ excerpt:  ubuntu18.04 Android源码下载编译
 	然后添加repo到PATH环境变量
 	export PATH=~/bin:$PATH
 
+然后由于我们是通过repo来拉取android源码的，git配置好后，还得安装配置repo
+
+	git clone https://aosp.tuna.tsinghua.edu.cn/git-repo/
+	chmod a+x git-repo/repo
+
+然后添加repo(路径目录如：~/git-repo/repo)到PATH环境变量
+
+export PATH=~/git-repo:$PATH
+
+然后到打开~/git-repo/repo文件，将REPO_URL替换为清华镜像地址，以避免下载android源码时可能出现的无法连接到 gerrit.googlesource.com问题。
+
+	REPO_URL = 'https://mirrors.tuna.tsinghua.edu.cn/git/git-repo'
+
+
+
 ### 建立一个工作目录 ###
 
 	mkdir android
@@ -50,25 +65,186 @@ excerpt:  ubuntu18.04 Android源码下载编译
 
 ### 安装环境依赖 ###
 
-	sudo apt-get -ym -qq install binutils
-	sudo apt-get -ym -qq install gperf
-	sudo apt-get -ym -qq install build-essential
-	sudo apt-get -ym -qq install curl
-	sudo apt-get -ym -qq install libxml2-utils
-	sudo apt-get -ym -qq install bison
-	sudo apt-get -ym -qq install flex
-	sudo apt-get -ym -qq install git
-	sudo apt-get -ym -qq install zip
-	sudo apt-get -ym -qq install valgrind
-	sudo apt-get -ym -qq install texinfo
-	sudo apt-get -ym -qq install gcc-multilib
-	sudo apt-get -ym -qq install g+±multilib
-	sudo apt-get -ym -qq install u-boot-tools
-	sudo apt-get -ym -qq install lzop
-	sudo apt-get -ym -qq install lib32z1-dev
-	sudo apt-get install python-mako
-	sudo apt-get install openjdk-8-jdk
+首先得配置java8
 
+	sudo apt-get install openjdk-8-jdk
+	sudo apt-get install openjdk-8-jre
+
+
+注意这里是配置openjdk，不要弄错了，我之前是按照一篇教程配置了android studio环境，结果配置的jdk不是openjdk，执行java -version时有如下提示
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/45.png)
+
+
+
+然后配置在ubantu 18.04中编译android源码需要的一些依赖，这些依赖包在ubantu 16.04中编译android源码时也是需要的
+
+	sudo apt-get install libx11-dev:i386 libreadline6-dev:i386 libgl1-mesa-dev g++-multilib
+	sudo apt-get install -y git flex bison gperf build-essential libncurses5-dev:i386
+	sudo apt-get install tofrodos python-markdown libxml2-utils xsltproc zlib1g-dev:i386
+	sudo apt-get install dpkg-dev libsdl1.2-dev libesd0-dev
+	sudo apt-get install git-core gnupg flex bison gperf build-essential  
+	sudo apt-get install zip curl zlib1g-dev gcc-multilib g++-multilib
+	sudo apt-get install libc6-dev-i386
+	sudo apt-get install lib32ncurses5-dev x11proto-core-dev libx11-dev
+	sudo apt-get install libgl1-mesa-dev libxml2-utils xsltproc unzip m4
+	sudo apt-get install lib32z-dev ccache
+
+到这里编译环境配置就算是完成了。
+
+这里到了最关键也是最容易出问题的一步了，首先cd到应的源码目路，初始化编译环境
+
+	. build/envsetup.sh
+
+初始化编译环境后，引入了一些执行脚本，其中就包括马上要使用的lunch指令。通过lunch指令可以设置编译目标，所谓的编译目标就是生成的镜像要运行在什么样的设备上。这里我们设置的编译目标是aosp_arm64-eng，因此执行指令
+
+	lunch aosp_arm64-eng
+	
+简单的说明下，aosp表示Android Open Source Project，arm64表示是使用arm64 cpu的设备，eng表示engineer版本，其直接开放了一些root等权限。当然直接使用lunch命令会列出所有可选的编译目标。
+
+最后，我们便可通过如下命令来开始编译andriod源码
+
+	make -j8
+
+这里的j8表示可以开启8个线程来参与编译源码，这里指定的线程数一般应该遵从cpu内核数的2倍这个规律，可以通过cat /proc/cpuinfo查看相关cpu信息。
+
+## 三、编译错误集锦 ##
+
+### 1、ubuntu18.04无法安装libesd0-dev ###
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/46.png)
+
+解决办法:
+
+	sudo vim /etc/apt/sources.list  //在行尾添加如下两行的内容
+	deb http://us.archive.ubuntu.com/ubuntu/ xenial main universe
+	deb-src http://us.archive.ubuntu.com/ubuntu/ xenial main universe
+
+	更新软件源并重新安装:
+	
+	sudo apt-get update && sudo apt-get install libesd0-dev
+
+### 2、编译错误-build stopped: subcommand failed. 解决方法 ###
+
+	make[1]: Leaving directory `/home/sunhz/sl8541e/out/target/product/sp8541e_srvm/obj/u-boot15'
+	make: Leaving directory `/home/sunhz/sl8541e/u-boot15'
+	[ 82% 3107/3782] Build hyb out/target/product/sp8541e_srvm/ob...h-hu.hyb <- external/hyphenation-patterns/hu//hyph-hu.pat.txt
+	21515 unique nodes, 102669 total
+	ninja: build stopped: subcommand failed.
+	20:31:15 ninja failed with: exit status 1
+
+解决方法：
+
+	1.vim /etc/security/limits.conf 添加如下的行
+	
+		# 解除服务器所有用户文件数 进程限制
+		*             soft       nofile      10240
+		*             hard       nofile      10240
+		*             soft       noproc      10240
+		*             hard       noproc      10240
+		             
+	2.保存后，再输入ulimit -n 10240回车即可生效。
+	
+	3.提示 ulimit 命令 执行：
+	
+	sudo sh -c "ulimit -n 65535 && exec su $LOGNAME"
+	再执行第二个步骤即可，
+	
+	4.使用ulimit -a可以检查查看！
+
+### 3、Ubuntu 报错信息 recipe for target 'run_soong_ui' failed make: *** [run_soong_ui] Error 1 ###
+
+报错信息：
+
+	[  1% 1130/67485] Lex: applypatc...bootable/recovery/edify/lexer.ll
+	FAILED: out/target/product/generic/obj/STATIC_LIBRARIES/libedify_intermediates/lexer.cpp 
+	/bin/bash -c "prebuilts/misc/linux-x86/flex/flex-2.5.39 -oout/target/product/generic/obj/STATIC_LIBRARIES/libedify_intermediates/lexer.cpp bootable/recovery/edify/lexer.ll"
+	flex-2.5.39: loadlocale.c:130:_nl_intern_locale_data: ?? 'cnt < (sizeof (_nl_value_type_LC_TIME) / sizeof (_nl_value_type_LC_TIME[0]))' ???
+	Aborted (core dumped)
+	ninja: build stopped: subcommand failed.
+	11:46:45 ninja failed with: exit status 1
+	build/core/main.mk:21: recipe for target 'run_soong_ui' failed
+	make: *** [run_soong_ui] Error 1
+
+解决方案：
+
+	在make之前调用export LC_ALL=C
+
+### 4、编译Android7源码出现:ninja: build stopped: subcommand failed.错误 ###
+
+解决方案：
+
+	$ vi prebuilts/sdk/tools/jack-admin
+	1.找到如下语句：
+	JACK_SERVER_COMMAND="java -XX:MaxJavaStackTraceDepth=-1 -Djava.io.tmpdir=$TMPDIR $JACK_SERVER_VM_ARGUMENTS -cp $LAUNCHER_JAR $LAUNCHER_NAME"
+	2.将上述语句修改为：
+	JACK_SERVER_COMMAND="java -XX:MaxJavaStackTraceDepth=-1 -Djava.io.tmpdir=$TMPDIR $JACK_SERVER_VM_ARGUMENTS -Xmx4096m -cp $LAUNCHER_JAR $LAUNCHER_NAME"
+	
+	主要是添加了-Xmx4096m参数，接下来在源码目录下执行如下命令重启jack-admin服务：
+	
+	$ ./prebuilts/sdk/tools/jack-admin stop-server 
+	$ ./prebuilts/sdk/tools/jack-admin start-server
+	再重新make就可以了。
+
+### 5、[git error] RPC failed; curl 56 GnuTLS recv error (-110)： The TLS connection was non-properly ter... ###
+
+解决方案：
+
+
+	执行以下命令即可
+	
+	git config --global http.sslVerify false
+	git config --global http.postbuffer 524288000
+
+
+### 6、E:Unable to locate package libssl-dev:i386 ###
+
+装下面3个包的时候发现出现下面错误，更换源也没用
+
+sudo apt-get install -y libssl-dev libssl-dev:i386
+sudo apt-get install -y libncurses5-dev libncurses5-dev:i386
+sudo apt-get install -y libreadline-dev libreadline-dev:i386
+
+解决方案：
+
+	后来查到是说没有启用i386架构
+	
+	dpkg --add-architecture i386
+	apt-get update
+
+### 7、Sub-process /usr/bin/dpkg returned an error code (1) ###
+
+执行apt-get install fcitx时，总是跳出以下错误提示：
+
+	在处理时有错误发生：
+	 grub-pc
+	E: Sub-process /usr/bin/dpkg returned an error code (1)
+
+解决方案：
+
+	vim /var/lib/dpkg/status
+	
+	在该文件下面找到Package: plymouth-theme-ubuntu-text开头的整段内容，大概25行左右。删除，保存退出（25dd， :wq）
+	
+	就是报错的包。
+	
+	再执行apt-get -f install
+
+### 8、解决 FAILED: /bin/bash -c "prebuilts/misc/linux-x86/bison/bison -d ###
+
+解决方法：
+
+	sudo apt-get install g++-multilib gcc-multilib lib32ncurses5-dev lib32readline-gplv2-dev lib32z1-dev bison
+
+### 9、[RK3399] Jack server installation not found ###
+
+解决方案：
+
+
+	下面开始安装 Jack server，进入 Android 源码根目录，执行下面的指令，就会安装 Jack server
+	
+	$ cd prebuilts/sdk/tools/
+	$ ./jack-admin install-server jack-launcher.jar jack-server-4.8.ALPHA.jar
 
 
 **[参考文献]**
@@ -78,3 +254,15 @@ excerpt:  ubuntu18.04 Android源码下载编译
 3. <https://blog.csdn.net/lq576165360/article/details/85274133>
 4. <https://blog.csdn.net/Yoryky/article/details/81813717>
 5. [Ubantu18.04环境下编译android源码](https://blog.csdn.net/Yoryky/article/details/81813717 "Ubantu18.04环境下编译android源码")
+6. [ubuntu18.04无法安装libesd0-dev【学习笔记】](https://blog.csdn.net/weixin_34248258/article/details/86028896 "")
+7. [编译错误-build stopped: subcommand failed. 解决方法](https://blog.csdn.net/touxiong/article/details/86233805 "")
+8. [ubuntu18.04无法安装libesd0-dev【学习笔记】](https://www.cnblogs.com/zzb-Dream-90Time/p/10080408.html "")
+9. [build/envsetup.sh分析](https://blog.csdn.net/daoshuti/article/details/72418094 "")
+10. [Ubuntu 报错信息 recipe for target 'run_soong_ui' failed make: *** [run_soong_ui] Error 1](https://blog.csdn.net/qq_21445563/article/details/92077709 "")
+11. [编译Android7源码出现:ninja: build stopped: subcommand failed.错误](https://blog.csdn.net/zhaohuarong/article/details/80662197 "")
+12. [[git error] RPC failed; curl 56 GnuTLS recv error (-110): The TLS connection was non-properly ter...](https://www.jianshu.com/p/f5e3362db219 "")
+13. [E:Unable to locate package libssl-dev:i386](https://blog.csdn.net/weixin_41572450/article/details/90257995 "")
+14. [Sub-process /usr/bin/dpkg returned an error code (1)](https://blog.csdn.net/qq_38375620/article/details/86707493 "")
+15. [ubuntu16.04 dpkg: error processing package *** (--configure): 大量包依赖错误](https://blog.csdn.net/w294954902/article/details/82906676 "")
+16. [解决 FAILED: /bin/bash -c "prebuilts/misc/linux-x86/bison/bison -d](https://blog.csdn.net/liangtianmeng/article/details/85911177 "")
+17. [[RK3399] Jack server installation not found](https://www.cnblogs.com/lialong1st/p/11491351.html "")
