--- a/_posts/Linux/2020-02-09-105.md
+++ b/_posts/Linux/2020-02-09-105.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  安装ubuntu系统，报错WslRegisterDistribution failed with error: 0x8007019e
+title:  安装ubuntu系统，报错WslRegisterDistribution failed with error： 0x8007019e
 category: Linux
 tags: [Linux]
-excerpt:  安装ubuntu系统，报错WslRegisterDistribution failed with error: 0x8007019e
+excerpt:  安装ubuntu系统，报错WslRegisterDistribution failed with error： 0x8007019e
 ---
 
 报错：
