修复未显示的博客

--- a/_posts/Android/Layout/2020-02-08-28.md
+++ b/_posts/Android/Layout/2020-02-08-28.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:   IllegalStateException: Cannot call this method while RecyclerView is computing a layout or scrolling 
+title:   IllegalStateException：Cannot call this method while RecyclerView is computing a layout or scrolling 
 category: Layout
 tags: [Layout]
-excerpt:  IllegalStateException: Cannot call this method while RecyclerView is computing a layout or scrolling
+excerpt:  IllegalStateException： Cannot call this method while RecyclerView is computing a layout or scrolling
 ---
 
 最近在使用RecyclerViewAdapter的时候遇到这个问题，这里总结记录一下，先看一下报错日志：
