--- a/_posts/Android/Exception/2020-02-09-15.md
+++ b/_posts/Android/Exception/2020-02-09-15.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:   Caused by： java.lang.SecurityException: Permission Denial: reading com.android.providers.media.MediaProvider uri content：//... 
+title:   Caused by： java.lang.SecurityException： Permission Denial： reading com.android.providers.media.MediaProvider uri content：//... 
 category: Exception
 tags: [Exception]
-excerpt:  Caused by： java.lang.SecurityException: Permission Denial: reading com.android.providers.media.MediaProvider uri content：//... 
+excerpt:  Caused by： java.lang.SecurityException： Permission Denial： reading com.android.providers.media.MediaProvider uri content：//... 
 ---
 
 在as中创建cordova中添加从相册选取照片的插件
