--- a/_posts/Web/Html/2020-02-09-13.md
+++ b/_posts/Web/Html/2020-02-09-13.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:   '无法将“vue”项识别为 cmdlet、函数、脚本文件或可运行程序的名称' 或 'vue不是内部或外部命令' 的解决方法 
+title:   “无法将“vue”项识别为cmdlet、函数、脚本文件或可运行程序的名称”或“vue不是内部或外部命令”的解决方法 
 category: Html
 tags: [Html]
-excerpt:  '无法将“vue”项识别为 cmdlet、函数、脚本文件或可运行程序的名称' 或 'vue不是内部或外部命令' 的解决方法
+excerpt:  “无法将“vue”项识别为cmdlet、函数、脚本文件或可运行程序的名称”或“vue不是内部或外部命令”的解决方法 
 ---
 
 方法：
