--- a/_posts/Linux/2020-02-09-90.md
+++ b/_posts/Linux/2020-02-09-90.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:   centos系统yum更新出错Error: Nothing to dothing to do
+title:   centos系统yum更新出错Error： Nothing to dothing to do
 category: Linux
 tags: [Linux]
-excerpt:  centos系统yum更新出错Error: Nothing to dothing to do
+excerpt:  centos系统yum更新出错Error： Nothing to dothing to do
 ---
 	
 	Setting up Install Process No package update available Error: Nothing to dothing to do
