--- a/_posts/Linux/2020-02-09-100.md
+++ b/_posts/Linux/2020-02-09-100.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  -bash: netstat： command not found
+title:  -bash： netstat： command not found
 category: Linux
 tags: [Linux]
-excerpt:  -bash: netstat： command not found
+excerpt:  -bash： netstat： command not found
 ---
 	
 	yum install net-tools
