--- a/_posts/Android/Exception/2020-02-08-13.md
+++ b/_posts/Android/Exception/2020-02-08-13.md
@@ -29,6 +29,6 @@ excerpt:  Unable to create converter for class`
 
 **[参考文献]**
 
-1. [Unable to create converter for class`](https://blog.csdn.net/u013290250/article/details/51613032 "Unable to create converter for class`")
+1. [Unable to create converter for class](https://blog.csdn.net/u013290250/article/details/51613032 "")
 
 
