--- a/_posts/Android/Other/2020-02-09-70.md
+++ b/_posts/Android/Other/2020-02-09-70.md
@@ -15,7 +15,8 @@ excerpt:  Android Studio中 Error java 无效的标记：-XX：MaxPermsize=512M
 
 **[参考文献]**
 
-1. [idea中 Error java 无效的标记：-XX：MaxPermsize=512M](https://blog.csdn.net/ata_123/article/details/95089494 "")
+
+1. [idea中 Error java 无效的标记：-XX：MaxPermsize=512M](https://blog.csdn.net/ata_123/article/details/95089494 "idea中 Error java 无效的标记：-XX：MaxPermsize=512M")
 
 
 
