--- a/_posts/Android/Other/2020-02-09-69.md
+++ b/_posts/Android/Other/2020-02-09-69.md
@@ -13,7 +13,7 @@ excerpt:  查看jks文件信息
 
 **[参考文献]**
 
-1. [查看jks文件信息](https://blog.csdn.net/as929706533/article/details/52660747 "")
+1. [查看jks文件信息](https://blog.csdn.net/as929706533/article/details/52660747 "查看jks文件信息")
 
 
 
