--- a/_posts/Android/Other/2019-10-26-49.md
+++ b/_posts/Android/Other/2019-10-26-49.md
@@ -260,9 +260,9 @@ sudo apt-get install -y libreadline-dev libreadline-dev:i386
 9. [build/envsetup.sh分析](https://blog.csdn.net/daoshuti/article/details/72418094 "build/envsetup.sh分析")
 10. [Ubuntu 报错信息 recipe for target 'run_soong_ui' failed make: *** run_soong_ui Error 1](https://blog.csdn.net/qq_21445563/article/details/92077709 "Ubuntu 报错信息 recipe for target 'run_soong_ui' failed make: *** run_soong_ui Error 1")
 11. [编译Android7源码出现:ninja: build stopped: subcommand failed.错误](https://blog.csdn.net/zhaohuarong/article/details/80662197 "编译Android7源码出现:ninja: build stopped: subcommand failed.错误")
-12. [[git error] RPC failed; curl 56 GnuTLS recv error -110: The TLS connection was non-properly ter...](https://www.jianshu.com/p/f5e3362db219 "[git error] RPC failed; curl 56 GnuTLS recv error -110: The TLS connection was non-properly ter...")
+12. [git error RPC failed; curl 56 GnuTLS recv error -110: The TLS connection was non-properly ter...](https://www.jianshu.com/p/f5e3362db219 "git error RPC failed; curl 56 GnuTLS recv error -110: The TLS connection was non-properly ter...")
 13. [E:Unable to locate package libssl-dev:i386](https://blog.csdn.net/weixin_41572450/article/details/90257995 "E:Unable to locate package libssl-dev:i386")
-14. [Sub-process /usr/bin/dpkg returned an error code (1)](https://blog.csdn.net/qq_38375620/article/details/86707493 "Sub-process /usr/bin/dpkg returned an error code (1)")
+14. [Sub-process /usr/bin/dpkg returned an error code (1)](https://blog.csdn.net/qq_38375620/article/details/86707493 "Sub-process /usr/bin/dpkg returned an error code 1")
 15. [ubuntu16.04 dpkg: error processing package *** --configure: 大量包依赖错误](https://blog.csdn.net/w294954902/article/details/82906676 "ubuntu16.04 dpkg: error processing package *** --configure: 大量包依赖错误")
 16. [解决 FAILED: /bin/bash -c "prebuilts/misc/linux-x86/bison/bison -d](https://blog.csdn.net/liangtianmeng/article/details/85911177 "解决 FAILED: /bin/bash -c "prebuilts/misc/linux-x86/bison/bison -d")
-17. [[RK3399] Jack server installation not found](https://www.cnblogs.com/lialong1st/p/11491351.html "[RK3399] Jack server installation not found")
+17. [RK3399 Jack server installation not found](https://www.cnblogs.com/lialong1st/p/11491351.html "[RK3399] Jack server installation not found")
