--- a/_posts/Java/Java/2020-02-09-38.md
+++ b/_posts/Java/Java/2020-02-09-38.md
@@ -19,7 +19,7 @@ excerpt:  使用SpringBoot简单快速的访问静态资源
 
 **[参考文献]**
 
-1. [简单快速的用SpringBoot访问静态资源（图片、html）](https://blog.csdn.net/qq_36481052/article/details/79075214 "")
+1. [简单快速的用SpringBoot访问静态资源（图片、html）](https://blog.csdn.net/qq_36481052/article/details/79075214 "简单快速的用SpringBoot访问静态资源（图片、html")
 
 
 
