--- a/_posts/Java/Java/2020-02-09-39.md
+++ b/_posts/Java/Java/2020-02-09-39.md
@@ -24,8 +24,8 @@ excerpt:  SpringBoot项目如何修改默认端口和url的项目名
 
 **[参考文献]**
 
-1. [SpringBoot项目如何修改默认端口和url的项目名](https://jingyan.baidu.com/article/09ea3edeaef803c0aede3901.html "")
-2.  [SpringBoot配置详解](https://www.cnblogs.com/SimpleWu/p/10032923.html "")
+1. [SpringBoot项目如何修改默认端口和url的项目名](https://jingyan.baidu.com/article/09ea3edeaef803c0aede3901.html "SpringBoot项目如何修改默认端口和url的项目名")
+2.  [SpringBoot配置详解](https://www.cnblogs.com/SimpleWu/p/10032923.html "SpringBoot配置详解")
 
 
 
