--- a/_posts/Java/Java/2020-02-09-40.md
+++ b/_posts/Java/Java/2020-02-09-40.md
@@ -60,7 +60,7 @@ pom中的依赖配置
 
 **[参考文献]**
 
-1. [spring boot 代码、注解配置获取yml、properties文件中的map即键值对](https://blog.csdn.net/yang1076180972/article/details/85678531 "")
+1. [spring boot 代码、注解配置获取yml、properties文件中的map即键值对](https://blog.csdn.net/yang1076180972/article/details/85678531 "spring boot 代码、注解配置获取yml、properties文件中的map即键值对")
 
 
 
