--- a/_posts/Web/Html/2020-02-09-16.md
+++ b/_posts/Web/Html/2020-02-09-16.md
@@ -45,6 +45,6 @@ excerpt:  Eclipse在线安装插件spket(可以自动提示extjs，支持ext4.0.
 
 **[参考文献]**
 
-1. [Eclipse在线安装插件spket(可以自动提示extjs，支持ext4.0.7版本)](https://blog.csdn.net/ruijiao_ren/article/details/59104167 "")
+1. [Eclipse在线安装插件spket 可以自动提示extjs，支持ext4.0.7版本](https://blog.csdn.net/ruijiao_ren/article/details/59104167 "Eclipse在线安装插件spket 可以自动提示extjs，支持ext4.0.7版本")
 
 
