--- a/_posts/Web/Html/2020-02-09-17.md
+++ b/_posts/Web/Html/2020-02-09-17.md
@@ -10,6 +10,6 @@ excerpt:  ExtJs xtype的使用
 
 **[参考文献]**
 
-1. [ExtJs xtype的使用](https://blog.csdn.net/idomyway/article/details/78768384 "")
+1. [ExtJs xtype的使用](https://blog.csdn.net/idomyway/article/details/78768384 "ExtJs xtype的使用")
 
 
