--- a/_posts/Linux/2020-02-09-95.md
+++ b/_posts/Linux/2020-02-09-95.md
@@ -15,7 +15,7 @@ excerpt:  vim 行号的显示
 **[参考文献]**
 
 1. [vim 行号的显示与隐藏](https://www.cnblogs.com/star520/p/9081357.html "vim 行号的显示与隐藏")
-2. [vim设置默认打开文件显示行号](https://blog.csdn.net/x763795151/article/details/91642530 "")
+2. [vim设置默认打开文件显示行号](https://blog.csdn.net/x763795151/article/details/91642530 "vim设置默认打开文件显示行号")
 
 
 
