--- a/_posts/Linux/2020-02-09-96.md
+++ b/_posts/Linux/2020-02-09-96.md
@@ -25,7 +25,7 @@ excerpt:  Windows10如何重置/卸载/修复内置Linux子系统
 
 **[参考文献]**
 
-1. [Windows10如何重置/卸载/修复内置Linux子系统](https://jingyan.baidu.com/article/48a42057208777a924250496.html "")
+1. [Windows10如何重置/卸载/修复内置Linux子系统](https://jingyan.baidu.com/article/48a42057208777a924250496.html "Windows10如何重置/卸载/修复内置Linux子系统")
 
 
 
