--- a/_posts/Linux/2020-02-09-104.md
+++ b/_posts/Linux/2020-02-09-104.md
@@ -78,7 +78,7 @@ excerpt:  新手安装 Ubuntu 操作系统
 
 **[参考文献]**
 
-1. [新手安装 Ubuntu 操作系统](https://www.cnblogs.com/wjw1014/p/9579245.html "")
+1. [新手安装 Ubuntu 操作系统](https://www.cnblogs.com/wjw1014/p/9579245.html "新手安装 Ubuntu 操作系统")
 
 
 
