--- a/_posts/Android/Other/2019-08-28-22.md
+++ b/_posts/Android/Other/2019-08-28-22.md
@@ -37,3 +37,12 @@ excerpt: Android6.0以上的权限问题
 
     
     <uses-permission android:name="android.permission.CALL_PHONE" />
+
+## 危险权限 ##
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/47.png)
+
+
+**[参考文献]**
+
+1. [Android 6.0动态权限申请](https://blog.csdn.net/qq_31433709/article/details/88425183 "Android 6.0动态权限申请")
