--- a/_posts/Android/Other/2020-03-13-74.md
+++ b/_posts/Android/Other/2020-03-13-74.md
@@ -22,5 +22,5 @@ excerpt:  Invoke-customs are only supported starting with Android O
 
 **【参考文献】**
 
-[Error: Invoke-customs are only supported starting with Android O --min-api 26](https://blog.csdn.net/csdn9228/article/details/90905430 "Error: Invoke-customs are only supported starting with Android O --min-api 26")
+1. [Error: Invoke-customs are only supported starting with Android O --min-api 26](https://blog.csdn.net/csdn9228/article/details/90905430 "Error: Invoke-customs are only supported starting with Android O --min-api 26")
 
