--- a/_posts/Linux/2020-03-13-110.md
+++ b/_posts/Linux/2020-03-13-110.md
@@ -10,7 +10,7 @@ excerpt:  Linux查看版本当前操作系统发行版信息
 
 **[参考文献]**
 
-1. [Linux查看系统基本信息，版本信息<最全版>](https://blog.csdn.net/qq_31278903/article/details/83146031 "Linux查看系统基本信息，版本信息<最全版>")
+1. [Linux查看系统基本信息,版本信息](https://blog.csdn.net/qq_31278903/article/details/83146031 "Linux查看系统基本信息,版本信息")
 
 
 
