--- a/_posts/Android/ContentProvider/2019-10-09-7.md
+++ b/_posts/Android/ContentProvider/2019-10-09-7.md
@@ -1,13 +1,156 @@
 ---
 layout: post
-title:    生成虚拟短信(API19以下)
+title:    生成虚拟短信
 category: ContentProvider
 tags: [ContentProvider]
-excerpt:  生成虚拟短信(API19以下)
+excerpt:  生成虚拟短信
 ---
 
 
-    public void make(View view) {
+1、权限
+
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.WRITE_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_MMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+
+2、ComposeSmsActivity
+
+	public class ComposeSmsActivity extends Activity {
+	
+	}
+
+#
+
+
+        <activity
+            android:name=".sms.ComposeSmsActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <action android:name="android.intent.action.SENDTO" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="sms" />
+                <data android:scheme="smsto" />
+                <data android:scheme="mms" />
+                <data android:scheme="mmsto" />
+            </intent-filter>
+        </activity>
+
+3、HeadlessSmsSendService
+
+	public class HeadlessSmsSendService extends Service {
+	    @Nullable
+	    @Override
+	    public IBinder onBind(Intent intent) {
+	        return null;
+	    }
+	}
+
+#
+
+
+        <service
+            android:name=".sms.HeadlessSmsSendService"
+            android:exported="true"
+            android:permission="android.permission.SEND_RESPOND_VIA_MESSAGE">
+            <intent-filter>
+                <action android:name="android.intent.action.RESPOND_VIA_MESSAGE" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:scheme="sms" />
+                <data android:scheme="smsto" />
+                <data android:scheme="mms" />
+                <data android:scheme="mmsto" />
+            </intent-filter>
+        </service>
+
+4、MmsReceiver
+
+	public class MmsReceiver extends BroadcastReceiver {
+	    @Override
+	    public void onReceive(Context context, Intent intent) {
+	
+	    }
+	}
+
+# 
+
+        <receiver
+            android:name=".sms.MmsReceiver"
+            android:permission="android.permission.BROADCAST_WAP_PUSH">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.WAP_PUSH_DELIVER" />
+                <data android:mimeType="application/vnd.wap.mms-message" />
+            </intent-filter>
+        </receiver>
+
+5、SMSContentObserver
+
+	public class SMSContentObserver extends ContentObserver {
+	    /**
+	     * Creates a content observer.
+	     *
+	     * @param handler The handler to run {@link #onChange} on, or null if none.
+	     */
+	    public SMSContentObserver(Handler handler) {
+	        super(handler);
+	    }
+	
+	    @Override
+	    public void onChange(boolean selfChange, Uri uri) {
+	        super.onChange(selfChange, uri);
+	    }
+	}
+
+6、SmsReceiver
+
+	public class SmsReceiver extends BroadcastReceiver {
+	    @Override
+	    public void onReceive(Context context, Intent intent) {
+	
+	    }
+	}
+
+#
+
+
+        <receiver
+            android:name=".sms.SmsReceiver"
+            android:permission="android.permission.BROADCAST_SMS">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_DELIVER" />
+            </intent-filter>
+        </receiver>
+
+
+7、调用方法
+
+    @TargetApi(Build.VERSION_CODES.KITKAT)
+    private void setDefault(View view) {
+        Intent intent = new Intent(Telephony.Sms.Intents.ACTION_CHANGE_DEFAULT);
+        intent.putExtra(Telephony.Sms.Intents.EXTRA_PACKAGE_NAME, getPackageName());
+        startActivityForResult(intent, 9127);
+    }
+
+#
+
+    @Override
+    protected void onActivityResult(int requestCode, int resultCode, @Nullable Intent data) {
+        if (requestCode == 9127) {
+            smsRestore();
+        }
+        super.onActivityResult(requestCode, resultCode, data);
+    }
+
+#
+
+
+    private void smsRestore() {
         try {
             Uri uri = Uri.parse("content://sms/");
             ContentValues values = new ContentValues();
@@ -22,3 +165,7 @@ excerpt:  生成虚拟短信(API19以下)
             e.printStackTrace();
         }
     }
+
+
+
+
