--- a/_posts/Android/Other/2020-01-14-51.md
+++ b/_posts/Android/Other/2020-01-14-51.md
@@ -6,108 +6,26 @@ tags: [Other]
 excerpt: Android打包
 ---
 
-## 01.android打包流程图 ##
-
-注意：
-
--（1）必须使用AS的SDK（纯净版），避免出问题不能Eclipse
-
--（2）建议使用ADT练习打包，ADT目录结构简单
+## 1.菜单栏----Build----Generate Signed APK ##
 
 ![](http://www.nangongyibin.com/assets/images/Android/Other/32.png)
 
-- 1.生成R文件，调用命令aapt.exe（sdk\build-tools\23.0.3） 
-- 2.编译aidl文件，调用命令aidl（sdk\build-tools\23.0.3） 
-- 3.编译所有的java文件，调用命令jdk的javac.exe 
-- 4.解压第三方jar包，调用命令jdk的jar 
-- 5.生成dex文件，调用命令dx.bat(sdk\build-tools\23.0.3) 
-- 6.生成资源包文件resources.ap_,调用命令aapt.exe 
-- 7.生成未签名apk，调用命令apkbuilder.bat（sdk\tools） 
-- 8.生成签名apk，调用命令jdk的jarsigner.exe
-
-## 02.命令行打包生成R文件 ##
-
-任何图形化解密底层都是命令
-
-为了在任何目录都能够调用aapt.exe命令，需要配置到path环境变量 
-
-命令
-
-    E:\bakclass\CmdDemo>aapt p -f -m -J build\gen -S res -I D:\ProgramFiles\Android\sdk\platforms\android-18\android.jar -M AndroidManifest.xml
-
-
-## 03.命令行打包编译java文件 ##
-
-先跳过编译aidl文件 
-
-注意：使用jdk不能使用1.8，建议使用1.7
-
-命令
-
-	E:\bakclass\CmdDemo>D:\ProgramFiles\Java1.7\jdk1.7.0_80\bin\javac.exe -encoding utf-8 -bootclasspath D:\ProgramFiles\Android\sdk\platforms\android-18\android.jar -cp libs\android-support-v4.jar -d build\classes src\com\ngyb\cmddemo\MainActivity.java build\gen\com\ngyb\cmddemo\R.java
-
-
-## 04.命令行打包解压第三方jar包 ##
-
-调用jdk的jar.exe命令
-
-命令
-
-	jar xvf ..\..\libs\android-support-v4.jar
-
-
-## 05.命令行打包生成dex文件 ##
-
-非常非常注意：必须使用AS的SDK（纯净版）、必须使用jdk1.7
-
-命令所在目录sdk\build-tools\23.0.3\dx.bat
-
-使用jdk1.8，生成dex文件报错：建议使用jdk1.7
+## 2.在Key store path中输入自己要用来进行签名的密钥文件的存放位置，同时输入密钥文件的读写用户名密码（如果还没有密钥文件点击图中的“Create New”进行创建即可） ##
 
 ![](http://www.nangongyibin.com/assets/images/Android/Other/33.png)
 
+## 3.APK Destination Folder-----APK文件生成的目录 ##
 
+Build Type----生成release版还是debug版
 
-解决上述问题：重新编译java文件，使用jdk1.7
-
-	dx --dex --output=E:\bakclass\CmdDemo\build\classes.dex E:\bakclass\CmdDemo\build\classes
-
-
-## 06.命令行打包编译资源文件 ##
-
-命令
-
-	E:\bakclass\CmdDemo>aapt p -f -M AndroidManifest.xml -S res -A assets -I D:\ProgramFiles\Android\sdk\platforms\android-18\android.jar -F build\resoures.ap_
-
-## 07.命令行打包生成未签名apk文件 ##
-
-调用命令：sdk\tools\apkbuilder.bat
-
-命令
-
-	E:\bakclass\CmdDemo>apkbuilder E:\bakclass\CmdDemo\build\Demo_unsigned.apk -u -z E:\bakclass\CmdDemo\build\resoures.ap_ -f E:\bakclass\CmdDemo\build\classes.dex -rf E:\bakclass\CmdDemo\src -rj E:\bakclass\CmdDemo\libs
-
-## 08.生成keystore ##
-
-没有签名不能安装，没有证书信息
-
-debug.keystore目录：C:\Users\用户名.android\debug.keystore
-
-debug.keystore运行测试项目，给apk签名，上线项目必须使用公司自己的keystore
+Signature Version----对哪些部分进行签名
 
 ![](http://www.nangongyibin.com/assets/images/Android/Other/34.png)
 
-生成keystore图形化界面
+## 4.生成完成后在指定生成目录下即会有一个release文件夹在其下即可找到生成的apk（app-release.apk是我之前生成的版本） ##
 
 ![](http://www.nangongyibin.com/assets/images/Android/Other/35.png)
 
-生成keystore命令（秘钥对称：公钥和使用）
+**【参考文献】**
 
-	E:\bakclass\CmdDemo>keytool -genkeypair -alias ngyb -keyalg "RSA" -validity 3650 -keystore ngyb.jks
-
-## 09.命令行打包生成签名apk文件 ##
-
-命令所在目录：jdk/bin/jarsigner.exe
-
-通过命令行获取keystore别名
-
+1. [Android Studio打包生成APK教程](https://www.cnblogs.com/lsdb/p/9337342.html "Android Studio打包生成APK教程")
