--- a/_posts/Linux/2020-04-19-113.md
+++ b/_posts/Linux/2020-04-19-113.md
@@ -132,8 +132,10 @@ excerpt:  阿里云申请配置https（tomcat）
      ./startup.sh
 
 
+### 6.Tomcat 9强制要求证书别名设置为tomcat。您需要使用以下keytool命令将protocol="HTTP/1.1"转换成protocol="org.apache.coyote.http11.Http11NioProtocol"。 ###
 
 
+	keytool -changealias -keystore domain.name.pfx -alias alias -destalias tomcat
 
 **[参考文献]**
 
