--- a/_posts/Android/Encryption/2020-05-03-4.md
+++ b/_posts/Android/Encryption/2020-05-03-4.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 凯撒加密解密
+title: Byte和bit
 category: Encryption
 tags: [Encryption]
-excerpt: 凯撒加密解密
+excerpt: Byte和bit
 ---
 
 - Byte:字节，一个Byte有8位，1Byte=8bit
