--- a/_posts/Android/Encryption/2020-05-04-9.md
+++ b/_posts/Android/Encryption/2020-05-04-9.md
@@ -69,3 +69,21 @@ sha256:32（加密后密文长度32个字节），64（密文转成16进制64个
 应用场景：用户登录/注册，用户密码必须加密传输
 
 只要是用户密码必须使用md5（不可逆的），服务器存储的是密文
+
+
+    public static void login1() {
+        String username = Constant.username;
+        String password = "123456";
+        try {
+            String url = Constant.base_url + "login/login?username=" + username + "&password=" + MD5.Md5Str("MD5", password + "+aa/rewc");
+            Log.e(TAG, "login1: " + url);
+            HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
+            InputStream ins = conn.getInputStream();
+            String s = StreamUtils.StreamToString(ins);
+            Log.e(TAG, "login1: " + s);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+撞库破解md5：不可能穷尽所有密文，加密多次，加盐
