修改一下目录分类

--- a/_posts/Java/SpringBoot/2019-09-01-1.md
+++ b/_posts/Java/SpringBoot/2019-09-01-1.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Initialization failed for 'https://start.spring.io' Please check URL
-category: Java
-tags: [Java]
+category: SpringBoot
+tags: [SpringBoot]
 excerpt: Initialization failed for 'https://start.spring.io' Please check URL
 ---
 
@@ -16,19 +16,19 @@ excerpt: Initialization failed for 'https://start.spring.io' Please check URL
 
 结果显示：
 
-![](http://www.nangongyibin.com/assets/images/Java/Java/1.png)
+![](http://www.nangongyibin.com/assets/images/Java/SpringBoot/1.png)
 
 
 2.想了下，是不是https的问题，把s去掉试了试，ping http://start.spring.io
 
 结果显示：
 
-![](http://www.nangongyibin.com/assets/images/Java/Java/2.png)
+![](http://www.nangongyibin.com/assets/images/Java/SpringBoot/2.png)
 
 
 3.受不了了，ping start.spring.io
 
-![](http://www.nangongyibin.com/assets/images/Java/Java/3.png)
+![](http://www.nangongyibin.com/assets/images/Java/SpringBoot/3.png)
 
 终于看到了自己想看的东西
 
@@ -46,14 +46,14 @@ excerpt: Initialization failed for 'https://start.spring.io' Please check URL
 
 5.settings->http proxy
 
-![](http://www.nangongyibin.com/assets/images/Java/Java/4.png)
+![](http://www.nangongyibin.com/assets/images/Java/SpringBoot/4.png)
 
  
 6.check connection
 
 在其中输入 https://start.spring.io
 
-![](http://www.nangongyibin.com/assets/images/Java/Java/5.png)
+![](http://www.nangongyibin.com/assets/images/Java/SpringBoot/5.png)
 
 舒服，绝对可以了
 
@@ -61,9 +61,9 @@ excerpt: Initialization failed for 'https://start.spring.io' Please check URL
 
 7.测试一下
 
-![](http://www.nangongyibin.com/assets/images/Java/Java/6.png)
+![](http://www.nangongyibin.com/assets/images/Java/SpringBoot/6.png)
 
-![](http://www.nangongyibin.com/assets/images/Java/Java/7.png)
+![](http://www.nangongyibin.com/assets/images/Java/SpringBoot/7.png)
 
 
 **[参考文献]**
