--- a/_posts/Java/SpringBoot/2020-02-08-22.md
+++ b/_posts/Java/SpringBoot/2020-02-08-22.md
@@ -1,26 +1,26 @@
 ---
 layout: post
 title:   使用idea 在springboot添加本地jar包的方法 
-category: Java
-tags: [Java]
+category: SpringBoot
+tags: [SpringBoot]
 excerpt:  使用idea 在springboot添加本地jar包的方法
 ---
 
 1.首先在与src同级的目录下新建一个lib目录，然后将本地jar包放在lib目录下，如下图所示：
 
-![](http://www.nangongyibin.com/assets/images/Java/Java/27.png)
+![](http://www.nangongyibin.com/assets/images/Java/SpringBoot/27.png)
 
 2.打开project ——>Libraries将项目的lib加入进来，如图所示：
 
-![](http://www.nangongyibin.com/assets/images/Java/Java/28.png)
+![](http://www.nangongyibin.com/assets/images/Java/SpringBoot/28.png)
 
 3.选择你存放项目的路径，将lib这个文件添加进来
 
-![](http://www.nangongyibin.com/assets/images/Java/Java/29.png)
+![](http://www.nangongyibin.com/assets/images/Java/SpringBoot/29.png)
 
 完成后可看到Libraries下有一个lib文件
 
-![](http://www.nangongyibin.com/assets/images/Java/Java/30.png)
+![](http://www.nangongyibin.com/assets/images/Java/SpringBoot/30.png)
 
 4.然后在pom.xml 文件里加入如下代码即可
 
