--- a/_posts/Java/SpringBoot/2020-02-08-29.md
+++ b/_posts/Java/SpringBoot/2020-02-08-29.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:   SpringBoot开发接口 
-category: Java
-tags: [Java]
+category: SpringBoot
+tags: [SpringBoot]
 excerpt:  SpringBoot开发接口
 ---
 
