--- a/_posts/Java/SpringBoot/2020-02-09-38.md
+++ b/_posts/Java/SpringBoot/2020-02-09-38.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:   使用SpringBoot简单快速的访问静态资源 
-category: Java
-tags: [Java]
+category: SpringBoot
+tags: [SpringBoot]
 excerpt:  使用SpringBoot简单快速的访问静态资源
 ---
 
