--- a/_posts/Java/SpringBoot/2020-02-09-39.md
+++ b/_posts/Java/SpringBoot/2020-02-09-39.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:   SpringBoot项目如何修改默认端口和url的项目名 
-category: Java
-tags: [Java]
+category: SpringBoot
+tags: [SpringBoot]
 excerpt:  SpringBoot项目如何修改默认端口和url的项目名
 ---
 
