--- a/_posts/Java/SpringBoot/2020-02-09-40.md
+++ b/_posts/Java/SpringBoot/2020-02-09-40.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:   spring boot 代码、注解配置获取yml、properties文件中的map即键值对 
-category: Java
-tags: [Java]
+category: SpringBoot
+tags: [SpringBoot]
 excerpt:  spring boot 代码、注解配置获取yml、properties文件中的map即键值对
 ---
 
