--- a/_posts/Java/SpringBoot/2019-09-22-5.md
+++ b/_posts/Java/SpringBoot/2019-09-22-5.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: springboot请求方式
-category: Java
-tags: [Java]
+category: SpringBoot
+tags: [SpringBoot]
 excerpt: springboot请求方式
 ---
 
