--- a/_posts/Android/Other/2020-07-11-82.md
+++ b/_posts/Android/Other/2020-07-11-82.md
@@ -109,3 +109,7 @@ c调用java的流程
 
 第三步需要注意 如果要调用的java方法和native方法不在一个类中需要创建对象,但是如果这个对象是Activity/Service四大组件 
 不要自己创建对象 需要使用jni接口传递进来的参数jobject
+
+**[参考文献]**
+
+1. [Android Studio JNI Hello World 程序](http://www.xiaoheidiannao.com/articles/Hello-World-For-Android-JNI.html "Android Studio JNI Hello World 程序")
