--- a/_posts/Android/Other/2019-08-27-12.md
+++ b/_posts/Android/Other/2019-08-27-12.md
@@ -32,7 +32,201 @@ excerpt: AndroidStudio常见设置
 
 ![](http://www.nangongyibin.com/assets/images/Android/Other/16.png)
 
+## 6、设置主题,窗口大小,动画效果 ##
 
+- ①修改主题 
+- ②修改全局窗口字体(需要选择中文字体,最好默认不做修改),字号 
+- ③ 窗口动画(电脑性能不怎样可以禁止掉)
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/61.png)
+
+## 7、修改menu或者toolBar ##
+
+这里我是添加了创建class,fragment,activity的ToolBar,这个根据个人情况 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/62.png)
+
+## 8、打开工程设置 ##
+
+- ①禁用自动打开上次关闭工程 ,禁用退出提示 
+- ②打开新项目提示方式
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/63.png)
+
+## 9、设置网络代理 ##
+
+①配置红杏公益代理(代理已经失效,了解下),现在下载通过内置的sdk manager不需要FQ即可下载,jcenter下载jar包也不需要FQ
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/64.png) 
+
+## 10、禁用自动检查更新 ##
+
+- ①取消as自动更新 
+- ②取消sdk自动更新
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/65.png) 
+
+## 11、配置快捷键 ##
+
+- ①自定义快捷键
+- ②根据内容搜索快捷键
+- ③根据按键搜索快捷键
+- ④删除快捷键
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/66.png) 
+
+## 12、编辑器 ##
+
+- ①鼠标悬停显示文档 
+- ②格式化&导包提示 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/67.png) 
+
+鼠标指针悬停若干时间，显示文档，时间自己改。就是按格式化代码或者导包时，是否会显示个对话框，觉得烦人的话，都取消掉吧
+
+## 13、显示行号，显示方法分隔线 ##
+
+- ①显示行号 
+- ②显示方法分隔符 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/68.png) 
+
+## 14、代码折叠 ##
+
+①取消方法自动折叠 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/69.png)
+
+## 15、代码智能提示 ##
+
+① 敲什么都提示②③提示时间设置 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/70.png)
+
+敲什么字符会提示，All(大小写全部符合)，None（不管大小写，符合就提示），（First letter）（第一个字符符合就OK，其他随意）。我这种脑残没记性的当然选择None。时间设置根据自己电脑性能.
+
+## 16、自动导包 ##
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/71.png)
+
+Optimize imports on the fly：优化导包，格式化代码时会删掉多余的导包。Add unambiguous imports on the fly：敲代码时，敲简单类名就帮你把包导了。
+
+## 17、创建个人代码样式配置 ##
+
+估计是为了保护默认的代码样式配置，让用户把配置搞坏了也能一键还原，IDEA不允许修改默认的配置，需要用户创建配置才能进行修改。 
+选择基于哪个主题的，然后Save As一份即可。
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/72.png) 
+
+## 18、修改代码字体 ##
+
+强烈建议用Consolas字体，好看！！！
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/73.png) 
+
+## 19、修改控制台字体 ##
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/74.png)
+
+## 20、Logcat字体 ##
+
+要改的话，得先把1那个地方的勾取消掉,默认android Logcat 每个级别的颜色都是一样的.建议修改 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/75.png)
+
+## 21、修改注释位置 ##
+
+禁用“语句堆一行” 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/76.png)
+
+Comment at frist column：启用的话，注释符号就会在行首，否则就按照缩进来注释。 
+Control statement in one line：格式化代码的时候，会把些很短的语句合并成一行。这样影响代码可读性.
+
+## 22、对齐变量名 ##
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/77.png)
+
+## 23、修改变量前后缀 ##
+
+静态成员是s，普通成员是m，转换成成员变量的时候自动加上m,生成setter,getter的时候会忽视m,很好很强大. 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/78.png)
+
+## 24、取消Android Lint 检查 ##
+
+一定程度加快速度吧,不过打开Android Lint会有一些android相关提示 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/79.png)
+
+## 25、新建文件模板 ##
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/80.png)
+
+效果如下 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/81.png)
+
+## 26、修改新建文件文件头 ##
+
+每次建新类,会加上这样的头信息
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/82.png)
+
+上图就是通用的文件头，框住的地方是你系统的用户名，想个性化的话，可以改这里，至于哪里引用这个文件头的呢，就在隔壁。 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/83.png)
+
+效果
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/84.png)
+
+## 27、修改文件,工程编码为UTF-8 ##
+
+别坑队友，小伙伴们都统一改为UTF-8吧。
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/85.png)
+
+## 28、自己定义Live Templates ##
+
+模板定义,方便开发,减少重复代码 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/86.png)
+
+## 29、添加管理插件 ##
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/87.png)
+
+## 30、Svn添加移除项目 ##
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/88.png)
+
+## 31、配置Svn安装路径 ##
+
+- ①可以自己是自己下载的Subversion SVN的svn.exe 
+- ②可以是Visual SVN里面的svn.exe 
+- ③可以是TortoiseSVN里面的svn.exe 
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/89.png)
+
+## 32、Github账号绑定 ##
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/90.png)
+
+## 33、配置git安装路径 ##
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/91.png)
+
+## 34、配置Gradle安装路径,离线模式,本地Gradle仓库 ##
+
+![](http://www.nangongyibin.com/assets/images/Android/Other/92.png)
+
+ 
 **[参考文献]**
 
 1. <https://blog.csdn.net/Fredydeng/article/details/87941151>
+2. [Android Studio 基本设置](https://jingyan.baidu.com/article/4e5b3e193e9bf691901e24fd.html "Android Studio 基本设置")
+3. [Android Studio提示忽略大小写](https://blog.csdn.net/shibin1990_/article/details/51685153 "Android Studio提示忽略大小写")
+4. [android studio中如何设置注释模板](https://jingyan.baidu.com/article/e6c8503c7195b7e54f1a1898.html "android studio中如何设置注释模板")
+5. [Android studio 设置注释模板以及函数注释快捷键](https://blog.csdn.net/langxinlen/article/details/50706211 "Android studio 设置注释模板以及函数注释快捷键")
+6. [最完整Android Studio插件整理](https://blog.csdn.net/alpha58/article/details/62881144 "最完整Android Studio插件整理")
